--- a/solution/helm/envs/example.yaml
+++ b/solution/helm/envs/example.yaml
@@ -4,7 +4,17 @@ global:
   env:
     EXAMPLE: "example"
 
+  # change 8000 to your application target port
+  pod:
+    ports:
+      - name: http
+        containerPort: 8000
+        protocol: TCP
+  service:
+    targetPort: 8000
+
   # add any configmap data you need
+  # configmaps will be mounted to /workspace/<configmap-name>
   config:
     mount:
       path: /workspace
