--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -1,17 +1,14 @@
 # syntax = docker/dockerfile:1.4
 
 # todo: add checking out to specific revision to avoid unexpected changes to model behaviour?
-# todo: update requirements
 
 FROM python:3.10.11-slim-bullseye as models_storage_stage
 
-RUN --mount=type=cache,id=infra-challenge-apt,target=/var/cache/apt \
+RUN --mount=type=cache,id=storage-apt,target=/var/cache/apt \
     apt-get update --yes && \
     apt-get install --yes --no-install-recommends \
     git \
-    git-lfs && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    git-lfs
 
 WORKDIR /models
 
@@ -28,7 +25,6 @@ RUN mkdir -p /code/models
 COPY --from=models_storage_stage /models /code/models
 
 COPY ./requirements.txt /code/requirements.txt
-
 RUN --mount=type=cache,id=infra-challenge-pip,target=/root/.cache \
     pip install -r /code/requirements.txt 
 
