--- a/solution/docker-compose.yml
+++ b/solution/docker-compose.yml
@@ -6,6 +6,13 @@ services:
     image: app 
     ports:
       - "8080:8080"
+    deploy:
+      resources:
+        reservations:
+          devices:
+          - driver: nvidia
+            device_ids: ['0']
+            capabilities: [gpu]
 
 networks:
   default:
