pytorch image update

--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10.11-slim-bullseye
+FROM pytorch/pytorch:1.13.0-cuda11.6-cudnn8-runtime
 
 WORKDIR /code
 
@@ -8,4 +8,4 @@ COPY ./app.py /code/app.py
 
 RUN pip install -r requirements.txt 
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]gi
