--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -9,10 +9,12 @@ RUN --mount=type=cache,id=apt,target=/var/cache/apt \
     g++ \
     git \
     git-lfs \
+    jq \
     pkg-config \
     libssl-dev && \
     git lfs install && \
     rm -rf /var/lib/apt/lists/*
+
 
 WORKDIR /tmp
 RUN wget https://download.pytorch.org/libtorch/cu117/libtorch-cxx11-abi-shared-with-deps-1.13.1%2Bcu117.zip && \
@@ -20,15 +22,14 @@ RUN wget https://download.pytorch.org/libtorch/cu117/libtorch-cxx11-abi-shared-w
     rm libtorch-cxx11-abi-shared-with-deps-1.13.1+cu117.zip
 
 RUN --mount=type=cache,id=pip,target=/root/.cache \
-    pip install numpy==1.24.3 torch==1.13.1
-
+    pip install numpy==1.24.3 torch==1.13.1 
+    
 # instructions copied from pytorch dockerfile in hope that it'll make same effect as using pytorch image istself
 LABEL com.nvidia.volumes.needed=nvidia_driver
 ENV NVIDIA_VISIBLE_DEVICES=all \
     NVIDIA_DRIVER_CAPABILITIES=compute,utility \
     LIBTORCH=/usr/lib/libtorch \
-    LD_LIBRARY_PATH=/usr/lib/libtorch/lib:/usr/local/nvidia/lib:/usr/local/nvidia/lib64 \
-    GIT_LFS_SKIP_SMUDGE=1
+    LD_LIBRARY_PATH=/usr/lib/libtorch/lib:/usr/local/nvidia/lib:/usr/local/nvidia/lib64
 
 WORKDIR /usr/src
 # cloning release 0.20.0 this way; why tf they don't have tags?!
