--- a/solution/docker-compose.yml
+++ b/solution/docker-compose.yml
@@ -8,13 +8,13 @@ services:
       - models:/models
     ports:
       - "3030:3030"
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #       - driver: nvidia
-    #         device_ids: ['0']
-    #         capabilities: [gpu]
+    deploy:
+      resources:
+        reservations:
+          devices:
+          - driver: nvidia
+            device_ids: ['0']
+            capabilities: [gpu]
 
 networks:
   default:
