--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -1,7 +1,6 @@
 FROM rust:1.69.0-bullseye
 
-RUN --mount=type=cache,id=apt,target=/var/cache/apt \
-    apt-get update --yes && \
+RUN apt-get update --yes && \
     apt-get install --yes --no-install-recommends \
     wget \
     unzip \
@@ -21,8 +20,7 @@ RUN wget https://download.pytorch.org/libtorch/cu117/libtorch-cxx11-abi-shared-w
     unzip -d /usr/lib libtorch-cxx11-abi-shared-with-deps-1.13.1+cu117.zip && \
     rm libtorch-cxx11-abi-shared-with-deps-1.13.1+cu117.zip
 
-RUN --mount=type=cache,id=pip,target=/root/.cache \
-    pip install numpy==1.24.3 torch==1.13.1 
+RUN pip install numpy==1.24.3 torch==1.13.1 
     
 # instructions copied from pytorch dockerfile in hope that it'll make same effect as using pytorch image istself
 LABEL com.nvidia.volumes.needed=nvidia_driver
@@ -33,15 +31,13 @@ ENV NVIDIA_VISIBLE_DEVICES=all \
 
 WORKDIR /usr/src
 # cloning release 0.20.0 this way; why tf they don't have tags?!
-RUN --mount=type=cache,id=cargo,target=/usr/local/cargo/registry \
-    git clone https://github.com/guillaume-be/rust-bert.git && \
+RUN git clone https://github.com/guillaume-be/rust-bert.git && \
     cd rust-bert && \
     git checkout f1b8409 && \
     cargo build --bin=convert-tensor 
 
 WORKDIR /usr/src/infra-challenge
 COPY . .
-RUN --mount=type=cache,id=cargo,target=/usr/local/cargo/registry \
-    cargo install --target-dir /usr/local/cargo/registry/infra-challenge --path .
+RUN cargo install --target-dir /usr/local/cargo/registry/infra-challenge --path .
 
 CMD ["./cmd.sh"]
