--- a/solution/requirements/requirements-dev.txt
+++ b/solution/requirements/requirements-dev.txt
@@ -8,29 +8,82 @@ bandit==1.7.5
     # via -r ./solution/requirements/requirements-dev.in
 black==23.3.0
     # via -r ./solution/requirements/requirements-dev.in
+blinker==1.6.2
+    # via flask
+brotli==1.0.9
+    # via geventhttpclient
+certifi==2023.5.7
+    # via
+    #   -c ./solution/requirements\requirements.txt
+    #   geventhttpclient
+    #   requests
+cffi==1.15.1
+    # via gevent
+charset-normalizer==3.1.0
+    # via
+    #   -c ./solution/requirements\requirements.txt
+    #   requests
 click==8.1.3
     # via
     #   -c ./solution/requirements\requirements.txt
     #   black
+    #   flask
 colorama==0.4.6
     # via
     #   -c ./solution/requirements\requirements.txt
     #   bandit
     #   click
+configargparse==1.5.3
+    # via locust
 flake8==6.0.0
     # via -r ./solution/requirements/requirements-dev.in
+flask==2.3.2
+    # via
+    #   flask-basicauth
+    #   flask-cors
+    #   locust
+flask-basicauth==0.2.0
+    # via locust
+flask-cors==3.0.10
+    # via locust
+gevent==22.10.2
+    # via
+    #   geventhttpclient
+    #   locust
+geventhttpclient==2.0.9
+    # via locust
 gitdb==4.0.10
     # via gitpython
 gitpython==3.1.31
     # via bandit
+greenlet==2.0.2
+    # via gevent
+idna==3.4
+    # via
+    #   -c ./solution/requirements\requirements.txt
+    #   requests
+importlib-metadata==6.6.0
+    # via flask
 isort==5.12.0
+    # via -r ./solution/requirements/requirements-dev.in
+itsdangerous==2.1.2
+    # via flask
+jinja2==3.1.2
+    # via flask
+locust==2.15.1
     # via -r ./solution/requirements/requirements-dev.in
 markdown-it-py==2.2.0
     # via rich
+markupsafe==2.1.2
+    # via
+    #   jinja2
+    #   werkzeug
 mccabe==0.7.0
     # via flake8
 mdurl==0.1.2
     # via markdown-it-py
+msgpack==1.0.5
+    # via locust
 mypy-extensions==1.0.0
     # via black
 packaging==23.1
@@ -41,23 +94,41 @@ pathspec==0.11.1
     # via black
 pbr==5.11.1
     # via stevedore
-platformdirs==3.5.0
+platformdirs==3.5.1
     # via black
+psutil==5.9.5
+    # via locust
 pycodestyle==2.10.0
     # via flake8
+pycparser==2.21
+    # via cffi
 pyflakes==3.0.1
     # via flake8
 pygments==2.15.1
     # via rich
+pywin32==306
+    # via locust
 pyyaml==6.0
     # via
     #   -c ./solution/requirements\requirements.txt
     #   bandit
+pyzmq==25.0.2
+    # via locust
+requests==2.30.0
+    # via
+    #   -c ./solution/requirements\requirements.txt
+    #   locust
 rich==13.3.5
     # via bandit
+roundrobin==0.0.4
+    # via locust
+six==1.16.0
+    # via
+    #   flask-cors
+    #   geventhttpclient
 smmap==5.0.0
     # via gitdb
-stevedore==5.0.0
+stevedore==5.1.0
     # via bandit
 tomli==2.0.1
     # via black
@@ -65,4 +136,22 @@ typing-extensions==4.5.0
     # via
     #   -c ./solution/requirements\requirements.txt
     #   black
+    #   locust
     #   rich
+urllib3==2.0.2
+    # via
+    #   -c ./solution/requirements\requirements.txt
+    #   requests
+werkzeug==2.3.4
+    # via
+    #   flask
+    #   locust
+zipp==3.15.0
+    # via importlib-metadata
+zope-event==4.6
+    # via gevent
+zope-interface==6.0
+    # via gevent
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
