fix deps problem, dockerfile to singlestage

--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -1,29 +1,17 @@
-FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime as build
+FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
 
 WORKDIR /app
 
-COPY requirements/ ./
+COPY requirements/requirements.txt ./requirements.txt
 
-RUN python3 -m pip install --upgrade pip setuptools wheel
-
-RUN python3 -m venv /app/venv
-ENV PATH="/app/venv/bin:$PATH"
-
-RUN python3 -m pip install -r requirements.txt
-
-FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime as prod
+RUN python3 -m pip install --upgrade pip setuptools wheel && python3 -m pip install -r requirements.txt
 
 ENV PYTHONPATH "$PYTHONPATH:/app/src"
-ENV PATH="/app/venv/bin:$PATH"
 
-WORKDIR /app
-
-COPY --from=build /app/venv ./venv
+COPY scripts/start.sh ./start.sh
+RUN chmod +x ./start.sh
 
 COPY src/ src/
-COPY scripts/start.sh ./start.sh
-
-RUN chmod +x ./start.sh
 
 ENTRYPOINT ["./start.sh"]
 EXPOSE 8000
