change dir app in supervisord-conf this cause make problem to start py files

--- a/solution/supervisord.conf
+++ b/solution/supervisord.conf
@@ -3,42 +3,42 @@ nodaemon=true
 
 [program:server]
 command=bash -c "sleep 0 && python server.py"
-directory=/app
+directory=/solution
 autostart=true
 autorestart=true
 
 [program:tasker]
 command=bash -c "sleep 2 && python tasker.py"
-directory=/app
+directory=/solution
 autostart=true
 autorestart=true
 
 [program:worker1]
 command=bash -c "sleep 5 && python worker1.py"
-directory=/app
+directory=/solution
 autostart=true
 autorestart=true
 
 [program:worker2]
 command=bash -c "sleep 10 && python worker2.py"
-directory=/app
+directory=/solution
 autostart=true
 autorestart=true
 
 [program:worker3]
 command=bash -c "sleep 15 && python worker3.py"
-directory=/app
+directory=/solution
 autostart=true
 autorestart=true
 
 [program:worker4]
 command=bash -c "sleep 20 && python worker4.py"
-directory=/app
+directory=/solution
 autostart=true
 autorestart=true
 
 [program:worker5]
 command=bash -c "sleep 25 && python worker5.py"
-directory=/app
+directory=/solution
 autostart=true
 autorestart=true
