Attempt to run through onnx.

--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -2,12 +2,21 @@
 
 FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
 
+RUN apt-get update --yes && \
+    apt-get install --yes --no-install-recommends \
+    git \
+    git-lfs \
+    jq && \
+    git lfs install && \
+    rm -rf /var/lib/apt/lists/*
+
 WORKDIR /code
 COPY ./requirements.txt /code/requirements.txt
 RUN pip install -r /code/requirements.txt 
 COPY app.py /code
+COPY cmd.sh .
 
 ENV TRANSFORMERS_CACHE=/models \
     TOKENIZERS_PARALLELISM=false
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"] 
+CMD ["./cmd.sh"] 
