added more 3 workers

--- a/solution/supervisord.conf
+++ b/solution/supervisord.conf
@@ -42,3 +42,21 @@ command=bash -c "sleep 25 && python worker5.py"
 directory=/solution
 autostart=true
 autorestart=true
+
+[program:worker8]
+command=bash -c "sleep 45 && python worker8.py"
+directory=/solution
+autostart=true
+autorestart=true
+
+[program:worker9]
+command=bash -c "sleep 55 && python worker9.py"
+directory=/solution
+autostart=true
+autorestart=true
+
+[program:worker11]
+command=bash -c "sleep 65 && python worker11.py"
+directory=/solution
+autostart=true
+autorestart=true
