Added execution line in Dockerfile to use it instead of docker-compose

--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -22,3 +22,5 @@ COPY ./helm /code/helm
 # RUN python src/utils.py
 
 EXPOSE 8000
+
+CMD ["uvicorn", "src.server:app", "--host", "0.0.0.0", "--port", "8000"]
