--- a/solution/triton-server/.dvc/config
+++ b/solution/triton-server/.dvc/config
@@ -1,4 +1,4 @@
 [core]
     remote = model_storage
 ['remote "model_storage"']
-    url = gdrive://1GFI52oisV1itWC__A65EsChGeiUx5tM_
+    url = ../arn:aws:s3:::electriclizard-model-registry
