fix model loading according to a doc

--- a/solution/triton-server/.dvc/config
+++ b/solution/triton-server/.dvc/config
@@ -2,3 +2,5 @@
     remote = model_storage
 ['remote "model_storage"']
     url = s3://electriclizard-models-registry/registry/
+['remote "model_storagehttp"']
+    url = https://electriclizard-models-registry.s3.amazonaws.com/registry/
