--- a/solution/triton-server/.dvc/config
+++ b/solution/triton-server/.dvc/config
@@ -1,5 +1,5 @@
 [core]
-    remote = model_storage
+    remote = model_storagehttp
 ['remote "model_storage"']
     url = s3://electriclizard-models-registry/registry/
 ['remote "model_storagehttp"']
