fixed file copies

--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -2,8 +2,9 @@
 FROM python:3.9
 
 # Copy project files into the Docker image
-COPY . /app
 COPY requirements.txt /app
+COPY main.py /app
+COPY models.py /app
 
 # Set working directory
 WORKDIR /app
