added explicit copies

--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -5,8 +5,10 @@ FROM python:3.9
 WORKDIR /app
 
 # Copy project files into the Docker image
-COPY ./ /app
-
+COPY requirements.txt /app
+COPY main.py /app
+COPY models.py /app
+RUN ls
 
 # Install dependencies
 RUN pip install -r requirements.txt
