moved execution to bashfile

--- a/solution/Dockerfile
+++ b/solution/Dockerfile
@@ -8,11 +8,9 @@ WORKDIR /app
 COPY requirements.txt /app
 COPY main.py /app
 COPY models.py /app
-RUN free -g
 
 # Install dependencies
 RUN pip install -r requirements.txt
-RUN python3 models.py
 # Set environment variables
 ENV FASTAPI_APP=main.py
 
@@ -21,4 +19,4 @@ EXPOSE 8000
 
 # RUN python3 models.py
 # Command to run the Flask application
-CMD ["uvicorn", "main:app", "--workers=2", "--worker-class=uvicorn.workers.UvicornWorker"]
+ENTRYPOINT [ "bash", "build_start.sh" ]
